BUG1113 [P] Test in carousel banners not fit on pictures
(cherry picked from commit b621109830a21de0924d8407186151b7ecfb0813)

--- a/src/client/src/Feature/PageContent/CarouselBanner/CarouselItem/styles.scss
+++ b/src/client/src/Feature/PageContent/CarouselBanner/CarouselItem/styles.scss
@@ -15,7 +15,7 @@
 @import 'Foundation/UI/common/scss-new/_variables';
 
 .banner_container{
-  top: 0;
+  top: 25%;
   right: 0;
   position: absolute;
 }
